# Capstone_Project_AIM

./: .env  .env.example  .env.template  .gitignore  D2L_AGENT_INTEGRATION.md  D2L_SCRAPER_README.md  Dockerfile  IMPLEMENTACAO_MELHORIAS.md  MERGE_SUMMARY.md  PROFESSOR_EXTRACTION_GUIDE.md  QUICK_START_ANNOUNCEMENTS.md  README.md  RESUMO_VERSOES_NO_ROTATION.md  SOLUCAO_COORDENADAS.md  all_announcements.json  announcement_contents.json  announcement_contents_all.json  content_home.json  content_home_2001539.json  content_home_2001540.json  debug_announcement_html.html  debug_sharepoint_page.html  demo_auto_update.py  devserver.sh  docker-compose.yml  extract_all_announcements.py  extract_announcement_content.py  extract_links_crawler.py  extract_professor_info.py  extract_sharepoint_events.py  generate_route_templates.py  generate_route_viewer.py  image_metadata_cache.pkl  list_routes.py  login_page_debug.html  main.py  multimodal_rag_complete.py  news_announcements.json  news_page_content.html  news_page_text.txt  (+24 more)
LeafletJS/: Directions.html  Previous_Working_Version.html  Readme_run.md  Rotation.html  campus_og.geojson  distortion.html  floorPlansScript.js  floor_levels.html  wip_directions.html
chroma_db/: chroma.sqlite3
config/: building_m_rooms.json  pytest.ini
data/: campus_events.json  campus_restaurants.json  courses.txt  d2l_announcements.json
docs/: ANALISE_COORDENADAS.md  COORDINATE_FIX_SUMMARY.md  CORRIDOR_SEGMENTS_TO_TRACE.md  CORRIDOR_SYSTEM_GUIDE.md  DIAGNOSTICO_COORDENADAS.md  EMBEDDING_IMPROVEMENTS_SUMMARY.md  GUIA_PRATICO_COMPENSACAO.md  README.md  (+9 more)
(+135 files in other folders)
