[project]
name = "capstone-project-aim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "autopep8>=2.3.2",
    "flask>=3.1.2",
    "google-cloud-aiplatform>=1.71.1",
    "google-generativeai>=0.8.5",
    "ipython>=9.6.0",
    "markdown2>=2.5.4",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "pip>=25.2",
    "pymupdf>=1.26.4",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "rich>=14.1.0",
    "vertexai>=1.71.1",
    "watchdog>=6.0.0",
]
